

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/wiersz_oceny"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/przedmiot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="12dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/przedmiot"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="189dp"
        android:layout_height="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="143dp"

        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/_2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/_3" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/_4" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/_5" />
    </RadioGroup>

</LinearLayout>